--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="UTF-8">
-  <title>Carlito del sol</title>
+  <title>Carlito del solarium</title>
 </head>
 <body>
   <h1>Le premier cas</h1>
